[gd_scene load_steps=9 format=3 uid="uid://d0ic1v8w00utv"]

[ext_resource type="Script" path="res://Scripts/element/fire_area.gd" id="1_kwnb1"]
[ext_resource type="Texture2D" uid="uid://bdfoq2n58yisv" path="res://Images/Effects/elements/fire_area01.png" id="2_seagd"]
[ext_resource type="Texture2D" uid="uid://bjhkxxfhpsu2m" path="res://Images/Effects/elements/fire_area02.png" id="3_ouk8x"]

[sub_resource type="SpriteFrames" id="SpriteFrames_psc3h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_seagd")
}, {
"duration": 1.0,
"texture": ExtResource("3_ouk8x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_s474k"]
radius = 80.0

[sub_resource type="Animation" id="Animation_pdf70"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fire_area:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xutl8"]
resource_name = "fire_area"
length = 0.14
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fire_area:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_juuiu"]
_data = {
"RESET": SubResource("Animation_pdf70"),
"fire_area": SubResource("Animation_xutl8")
}

[node name="FireArea" type="CharacterBody2D"]
z_index = -4
script = ExtResource("1_kwnb1")

[node name="fire_area" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_psc3h")

[node name="FireAreaHit" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="FireAreaHit"]
shape = SubResource("CircleShape2D_s474k")
one_way_collision_margin = 0.0

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_juuiu")
}

[connection signal="body_entered" from="FireAreaHit" to="." method="_on_fire_area_hit_body_entered"]
[connection signal="body_exited" from="FireAreaHit" to="." method="_on_fire_area_hit_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
